[package]
name = "himura-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
bytes = "1.0"
toml = "0.8"
fxhash = "0.2"
memchr = "2.7"
parking_lot = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "cache_bench"
harness = false
